[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/enemy_3.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy_3.gd" type="Script" id=2]
[ext_resource path="res://sprites/enemy_3_attack.png" type="Texture" id=3]
[ext_resource path="res://scenes/other/metal_death_particles.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/other/appear_par.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.3732, 3.39328 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="Animation" id=11]
resource_name = "get_hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00390202, 0.0504261, 0.0981509 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="enemy_3" type="RigidBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 15
mass = 65535.0
contacts_reported = 1
contact_monitor = true
linear_damp = 1.0
angular_damp = 100.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
frame = 1
playing = true

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Particles2D" parent="." instance=ExtResource( 4 )]

[node name="anim" type="AnimationPlayer" parent="."]
anims/get_hit = SubResource( 11 )

[node name="appear_par" parent="." instance=ExtResource( 5 )]
amount = 350
[connection signal="body_entered" from="." to="." method="_on_enemy_3_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
